<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/holo_blue_bright"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="Help"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@android:color/white"
                android:src="@drawable/limit"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:text="@string/slide_1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:text="@string/slide_1_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@android:color/white"
                android:src="@drawable/input"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:text="@string/slide_2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:text="@string/slide_2_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@android:color/white"
                android:src="@drawable/history"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:text="@string/slide_3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:text="@string/slide_3_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@android:color/white"
                android:src="@drawable/worries"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:text="@string/slide_4_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:text="@string/slide_4_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="Developer"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/me"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:text="@string/developer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@android:color/white"
                android:textSize="14dp"
                android:text="@string/developer_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/website"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

    </LinearLayout>

</ScrollView>